fixed text alignment

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html,body {
   font-size: 70px;
 	letter-spacing: 1.7px;
   margin-top: 0;
-  margin-bottom: 40px;
+  margin-bottom: 100px;
 }
 
 
